@@ -4,12 +4,16 @@ Pending changes in the mainline
 Major changes
 -------------
 
-* Full refactoring of the DB schema
-* Generate a sample configuration file from command line
+* Full refactoring of the DB schema and of the REST API
+* Introduction of generic classes for REST APIs (in Core/RestApi)
+* The patient/study/series/instances are now indexed by SHA-1 digests
+  of their DICOM Instance IDs (and not by UUIDs anymore): The same
+  DICOM objects are thus always identified by the same Orthanc IDs
 
 Minor changes
 -------------
 
+* Generate a sample configuration file from command line
 * "CompletedSeries" event in the changes API
 * Thread to continuously flush DB to disk (robustness against reboots)
 
